# hammock_plot

./: .gitignore  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  readme_examples.py  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: README.md  docs.yml  gallery.yml  publish-pypi.yml  readme-toc.yml  tests.yml
data/: data_asthma.csv  data_diabetes.csv  data_shakespeare.csv  data_shakespeare_v5.csv  data_weight_test.csv  portugal_student.csv
docs/: README.md  conf.py  index.rst
examples/gallery/: 02_penguins_numerical_no_highlight.py  02_penguins_violin_no_highlight.py  03_shakespeare_box.py  04_penguins_mixed_displays.py  05_penguins_highlight.py  05_penguins_rugplots_compact_hfill.py  06_asthma_clinical_profile.py  08_portugal_student_labels.py  10_diabetes_missing_satisfaction.py  15_penguins_par_coord_plot.py  16_penguins_slopegraph.py  20_penguins_unibars_only.py  25_shakespeare_unibars_only_bar.py  30_portugal_student_labels.py  GALLERY_HEADER.rst  README.md  _gallery_utils.py  asthma_clinical_profile.py  asthma_highlight.py  diabetes_missing_satisfaction.py  penguins_connectors_only.py  penguins_mixed_displays.py  penguins_rugplots_compact_hfill.py  penguins_unibars_only.py  penguins_violin_no_highlight.py  shakespeare_bar.py  shakespeare_box.py  shakespeare_social_order.py
gallery/: README.md  index.rst  requirements.txt
hammock/: __init__.py  hammock.py
hammock_plot/: __init__.py  figure.py  hammock_plot.py  main.py  shapes.py  unibar.py  utils.py  value.py
scripts/: update_readme_toc.py
test_suite/: README.md  readme.txt  test_notebook_suite.py  test_suite.ipynb
tests/: test_notebook_suite.py
