[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hammock-plot"
version = "1.2.0"
description = "Hammock plot visualization for categorical and mixed categorical-continuous data"
readme = {text = "For the current project description, documentation, and examples, please see the GitHub repository: https://github.com/TianchengY/hammock_plot", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Tiancheng Yang", email = "t77yang@uwaterloo.ca"},
    {name = "Sandra Huang", email = "sandra.huang@uwaterloo.ca"},
    {name = "Matthias Schonlau", email = "schonlau@uwaterloo.ca"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/TianchengY/hammock_plot"
Repository = "https://github.com/TianchengY/hammock_plot"

[tool.setuptools.packages.find]
include = ["hammock_plot", "hammock_plot.*"]
